--- a/code/Clue.ipynb
+++ b/code/Clue.ipynb
@@ -23,19 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[31, 23]\n"
+      "[12, 12]\n"
      ]
     }
    ],
@@ -101,11 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "j_beans\n",
+      "clue_suspects\n",
+      "ff_table\n",
+      "test\n",
+      "movies\n",
+      "html\n",
+      "comments\n"
+     ]
+    }
+   ],
    "source": [
     "from pymongo import MongoClient\n",
     "\n",
@@ -132,12 +147,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "suspects = db.clue_suspects\n",
+    "import ast\n",
+    "import json\n",
+    "sus = db.clue_suspects\n",
+    "perp5 = []\n",
+    "for i in sus.find({}):\n",
+    "    perp5.append(i)\n",
+    "perp5_dict = perp5[4]['data']   \n",
+    "x = ast.literal_eval(perp5_dict)\n",
+    "df = pd.DataFrame(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Collection' object is not callable. If you meant to call the 'keys' method on a 'Collection' object it is failing because no such method exists.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-2132f06f13f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msuslist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msuspects\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdata_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdata_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mchar\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msuslist\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/work/anaconda/lib/python2.7/site-packages/pymongo/collection.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   2358\u001b[0m                         \u001b[0;34m\"call the '%s' method on a 'Collection' object it is \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2359\u001b[0m                         \u001b[0;34m\"failing because no such method exists.\"\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2360\u001b[0;31m                         self.__name.split(\".\")[-1])\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'Collection' object is not callable. If you meant to call the 'keys' method on a 'Collection' object it is failing because no such method exists."
+     ]
+    }
+   ],
+   "source": [
+    "suslist = list(suspects.keys())\n",
+    "data_x = []\n",
+    "data_y = []\n",
+    "name = []\n",
+    "for char in suslist:\n",
+    "    for i in range(1000):\n",
+    "        position = movement(20)\n",
+    "        data_x.append(position[0])\n",
+    "        data_y.append(position[1])\n",
+    "        name.append(char)\n",
+    "        \n",
+    "suspect_data = pd.DataFrame()\n",
+    "\n",
+    "suspect_data['Name'] = name\n",
+    "suspect_data['X'] = data_x\n",
+    "suspect_data['Y'] = data_y\n",
+    "\n",
+    "suspect_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'suspect_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-6d35af8bf596>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msuspect_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'X'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Y'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mY\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msuspect_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'suspect_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "X = suspect_data[['X','Y']]\n",
+    "Y = suspect_data['Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knn = KNeighborsClassifier()\n",
+    "knn.fit(X_train, y_train)\n",
+    "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+    "           metric_params=None, n_jobs=1, n_neighbors=5, p=2,\n",
+    "           weights='uniform')\n",
+    "\n",
+    "print 'Expected ','\\n', pd.Series(knn.predict(X_test)).value_counts()\n",
+    "print knn.score(X_test,y_test)\n",
+    "print '\\n'\n",
+    "print 'Predicted ','\\n', pd.Series(knn.predict(df[['stepX','stepY']])).value_counts()\n",
+    " \n",
+    "#print(metrics.classification_report(expect, predict))\n",
+    "#print(metrics.confusion_matrix(expect, predict))\n",
+    "#print predict\n",
+    "print knn.score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "knn.fit(X_train, y_train)\n",
+    "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+    "           metric_params=None, n_jobs=1, n_neighbors=5, p=2,\n",
+    "           weights='uniform')\n",
+    "knn.score(X_test,y_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,18 +302,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colonel Mustard: ID Number -  58130400ce4eb06cc9dbe5d9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in sus.find({'name':'perp_5'}):\n",
+    "    print 'Colonel Mustard: ID Number - ', i['_id']"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Write a function that will take in a murderer's movements and print out the most likely suspect. We here at the lab are seeing a lot of people murdered recently, and don't want to have to go through all this effort to find the killer every time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def susfindfuc(df, x_label, y_label):\n",
+    "    X = suspect_data[['X','Y']].values\n",
+    "    y = suspect_data['name'].values\n",
+    "    knn = KNeighborsClassifier(n_neighbors=8,\n",
+    "                               weights='uniform',\n",
+    "                               p=2,\n",
+    "                               metric='minkowski')\n",
+    "    knn.fit(X, y)\n",
+    "    predictions = knn.predict(df[[x_label,y_label]])\n",
+    "    print pd.Series(predictions).value_counts()\n",
+    "    print suspects.keys()"
    ]
   },
   {
@@ -175,9 +361,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
